--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     list-style: none;
+
 }
 
 .normal {
@@ -84,6 +85,12 @@
     margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
+    height: 150px;
+    transition: 0.5s;
+}
+
+.pokemon:hover {
+    height: 180px;
 }
 
 .pokemon .number {
@@ -95,36 +102,59 @@
 
 .pokemon .name {
     text-transform: capitalize;
-    color: #fff;
+    color: #ffffff;
     margin-bottom: .25rem;
+
 }
 
 .pokemon .detail {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
 }
 
 .pokemon .detail .types {
     padding: 0;
-    margin: 0;
+    margin: 10;
     list-style: none;
 }
 
 .pokemon .detail .types .type {
-    color: #fff;
+    color: #ffffff;
     padding: .25rem .5rem;
     margin: .25rem 0;
     font-size: .625rem;
     border-radius: 1rem;
     filter: brightness(1.1);
     text-align: center;
+    position: absolute;
+    transform: translate(-80px, 20px);
 }
 
 .pokemon .detail img {
     max-width: 100%;
     height: 70px;
+    transform: translate(45px, -40px);
+}
+
+.pokemon:hover .detail img {
+    top: -200px;
+    scale: 0.95;
+}
+
+.pokemon .abilities {
+    visibility: hidden;
+    color: #000;
+    opacity: .6;
+}
+
+.pokemon:hover .abilities {
+    display: block;
+    flex-direction: column;
+    transform: translate(-30px, 70px);
+    transition: 0.5s;
+    visibility: visible;
 }
 
 .pagination {
@@ -144,7 +174,14 @@
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
+    cursor: pointer;
 }
+
+.logo {
+    text-align: center ;
+}
+
+
 
 @media screen and (min-width: 380px) {
     .pokemons {
